iptables-save.log
# Generated by iptables-save v1.6.1 on Mon Jan 22 15:10:37 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [8454:1094467]
-A INPUT -s 127.0.0.0/8 -d 127.0.0.0/8 -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --dport 33434:33523 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -i enp1s0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i enp1s0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i enp1s0 -p udp -m udp --dport 67:68 -j ACCEPT
-A INPUT -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp1s0 -o ppp0 -j ACCEPT
-A FORWARD -j DROP
COMMIT
# Completed on Mon Jan 22 15:10:37 2018
# Generated by iptables-save v1.6.1 on Mon Jan 22 15:10:37 2018
*nat
:PREROUTING ACCEPT [166:12384]
:INPUT ACCEPT [2:144]
:OUTPUT ACCEPT [1070:75394]
:POSTROUTING ACCEPT [28:2753]
-A POSTROUTING -o ppp0 -j MASQUERADE
COMMIT
# Completed on Mon Jan 22 15:10:37 2018
